--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,13 @@
   <body>
     <div class="container-fluid text-center">
       <h1 class="mt-5">OMG! you will not believe me but...</h1>
-      <h1 id="the-excuse">My dag ate the homework</h1>
+      <h1 id="excuse">My dag ate the homework</h1>
     </div>
-    <button id="excuseButton">Generate New Excuse</button>
+    <input
+      id="eGenerator"
+      type="button"
+      value="Excuse Generator"
+      onclick="generateExcuse();"
+    />
   </body>
 </html>
